--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Mylibrary</string>
-    <string name="title_activity_my_library">MyLibraryActivity</string>
     <string name="title_activity_book_search">BookSearch</string>
+    <string name="title_activity_my_library_management">내 서재 관리창</string>
 </resources>
