--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="title_activity_my_library_management">내 서재 관리창</string>
     <string name="title_activity_reserved_book">예약 도서 조회창</string>
     <string name="title_activity_rented_book">대출 도서 조회창</string>
+    <string name="title_activity_reserved_book_detail">예약 도서 상세 정보</string>
+    <string name="title_activity_rented_book_detail">대출 도서 상세 정보</string>
     <string name="title_activity_login">로그인</string>
 </resources>
